# quirc

./: .gitignore
pixel/: CMakeLists.txt  test.c  test.h  topix.py
